Feature/PN-10189 (#6)
* PN-10186

PN-10186 spostato test cucumber in repository

* PN-10187

 generazione classi da safestorage

* PN-10187 fix lib e refactor per build

* PN-10188: Added availability-check step in StepDefinitions.

* PN-10188 check availability messages in queue

* PN-10189: Added new configuration file and implemented a logic to change the values assigned to cucumber tests based on the environment specified in application.properties

* PN-10189: Moved properties to application-test.properties

* PN-10189: added EnvironmentConfiguration and related json file to dynamically manage properties depending on the selected environment.

* PN-10189: fixed json structure to match the requirements, assigned document.availability.timeout.seconds to application-test.properties and removed the previous EnvironmentConfiguration.java class, updated uploadSafeStorage.feature to use the new json test-variables-$env.json files.

* PN-10189 clean code and fix queue test

* PN-10189 paramas refactoring

* PN-10189 fix error queue code

* PN-10189 fix debug log

* PN-10189: Removed wrong examples. Added tag to uploadSafeStorage.feature.

* PN-10189: Added a timeout to availability step.
Fixed Config class.

* PN-10189: Fixed property setting.

* PN-10189: Removed polling attempts from SqsUtils polling method.

Added assertion on updateMetadata response statusCode.

* PN-10189: Implemented new polling method for sqs messages.
Removed unused classes.
Introduced parallel test execution
Fixed SonarCloud issues.

* PN-10189: Fixed issue on QueuePoller.startPolling() method.

* PN-10048: Splitted EC and SS tests into different suites.
Introduced junit-platform.properties file to handle concurrency and parallelism related properties.

* PN-10189: Fixed unmodifiable set in PnSsQueuePoller.

* PN-10189 aggiunti casi test getFile e updateFile

* PN-10048: Added getDocumentsConfigs and getCurrentClientConfiguration cucumber t